<?xml version="1.0"?>
<package format="2">
  <name>odom_covariance</name>
  <version>1.0.1</version>
  <description>
    Package for adding covariance to exist odom
  </description>
  <license>Apache 2.0</license>
  <author email="cq2essz@gmail.com">sizhen she</author>
    <maintainer email="vestorch@todo.todo">vestorch</maintainer>
  <url>http://ros.org/wiki/odom_covariance</url>

  <author>Jimmy,Robot2</author>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>nav_msgs </depend>
</package>
